--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 repositories {
     maven { url 'https://jitpack.io' }
+    jcenter()
 }
 
 dependencies {
@@ -35,9 +36,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    implementation 'com.borax12.materialdaterangepicker:library:2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.preference:preference:1.1.0-alpha05'
-
+    implementation("com.google.android.material:material:1.2.0-alpha03")
 
 }
